# algebrach

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: .env.example  __main__.py  entrypoint.sh  health.py  models.py  settings.py
app/airtable/: kek_storage.py
app/common/: executor.py  tg.py  utils.py
app/handlers/: basic.py
app/handlers/kek/: __init__.py  kek.py  kek_add.py  kek_info.py  kek_inline.py  surprise_kek.py
app/middlewares/: event_context.py  log_updates.py  skip_anonymous.py  throttle_users.py
tests/: conftest.py  test_health.py  test_models.py
tests/airtable/: test_kek_storage.py
tests/common/: test_executor.py  test_tg.py  test_utils.py
tests/handlers/: test_basic.py  test_kek.py
tests/handlers/kek/: test_kek.py  test_kek_add.py  test_kek_info.py  test_kek_inline.py
tests/middlewares/: test_event_context.py  test_log_updates.py  test_skip_anonymous.py  test_throttle_users.py
