[project]
name = "algebrach"
version = "1.0.0"
description = "A Telegram bot for the https://t.me/mechmath community"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "uburuntu", email = "ramzan.bekbulatov@pm.me" }]

dependencies = [
    "aiogram[fast,i18n,redis]==3.24.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyairtable==3.3.0",
    "pytz==2025.2",
    "throttler==1.2.2",
    "aiocache==0.12.3",
]

[project.urls]
Homepage = "https://t.me/algebrach_bot"
Repository = "https://github.com/uburuntu/algebrach"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
    "pytest-env==1.2.0",
    "pre-commit==4.5.1",
    "ruff==0.14.11",
    "ipython==9.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
fix = true
target-version = "py314"
line-length = 88

[tool.ruff.lint]
ignore = [
    "RUF001", # do not highlight cyrillic characters in code
]
unfixable = [
    "ERA", # do not autoremove commented out code
    "F841", # do not autoremove unused variables
]
extend-select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "I", # isort
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-local-folder = ["app", "tests"]
combine-as-imports = true
lines-between-types = 1

[tool.pytest.ini_options]
pythonpath = ["./app"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = [
    "ENVIRONMENT=test",
    "TELEGRAM_BOT_TOKEN=42:ABC",
    "AIRTABLE_ACCESS_TOKEN=abcABC"
]
